# AlphaSNetwork

./: .gitignore  Cargo.toml  Dockerfile  README.md  SOURCE-README.md  deploy.sh  docker-compose.yml  docker-entrypoint.sh  genesis.json  test-suite.sh  tokenomics.md
alpha-social-api/src/: main.py
alpha-social-api/src/database/: app.db
alpha-social-api/src/models/: blockchain.py  content.py
alpha-social-api/src/routes/: content.py  social.py
alpha-social-api/src/static/: index.html
alpha-social-desktop/: error.html  loading.html  main.js  package-lock.json  package.json  preload.js
alpha-social-frontend/: index.html  package.json
alpha-social-frontend/public/: manifest.json  sw.js
alpha-social-frontend/src/: App.jsx
alpha-social-frontend/src/components/: MobileOptimized.jsx
contracts/voting/: Cargo.toml  lib.rs
docs/: README.md  deployment-guide.md  maintenance-plan.md  node-deployment-guide.md  technical-guide.md  user-manual.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  platform.rs  rpc.rs  service.rs
pallets/alpha-coin/: Cargo.toml
pallets/alpha-coin/src/: lib.rs
pallets/alpha-social/: Cargo.toml
pallets/alpha-social/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: build-cross-platform.sh  install-linux.sh  install-macos.sh  install-windows.ps1  node-manager.py
